[gd_scene load_steps=5 format=3 uid="uid://dphlgrm0elh6y"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_qmu1c"]
[ext_resource type="Script" path="res://sources/gui/WindowPanel.gd" id="2_rx7is"]
[ext_resource type="Script" path="res://sources/chat/Chat.gd" id="3_ipdx4"]
[ext_resource type="FontFile" uid="uid://2r8d45jgc1r5" path="res://data/graphics/fonts/romulus.ttf" id="4_0mdev"]

[node name="Chat" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 410.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
theme = ExtResource("1_qmu1c")
script = ExtResource("2_rx7is")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
script = ExtResource("3_ipdx4")

[node name="ChatTabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("1_qmu1c")
drag_to_rearrange_enabled = true

[node name="NewText" type="LineEdit" parent="VBoxContainer"]
visible = false
layout_mode = 2
focus_mode = 1
theme_override_fonts/font = ExtResource("4_0mdev")
placeholder_text = "Type here"
max_length = 255
caret_blink = true
caret_blink_interval = 0.5

[connection signal="gui_input" from="." to="." method="OnGuiInput"]
[connection signal="text_submitted" from="VBoxContainer/NewText" to="VBoxContainer" method="OnNewTextSubmitted"]
